--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -8,10 +8,15 @@ jobs:
         uses: actions/checkout@master
       - name: Test
         run: |
-          gcc -ftest-coverage -fprofile-arcs -O0 -o test test.c lib.c
+          #gcc -ftest-coverage -fprofile-arcs -O0 -o test test.c lib.c
+          clang -fprofile-instr-generate -fcoverage-mapping  lib.c test.c -o test
           ./test
-          gcov -abcfu lib.c
+          #gcov -abcfu lib.c
+          llvm-profdata merge -sparse default.profraw -o default.profdata
+          #llvm-cov show ./test -instr-profile=default.profdata
+          #llvm-cov report ./test -instr-profile=default.profdata
       - name: Upload
         uses: codecov/codecov-action@v1
         with:
-          files: ./lib.c.gcov
+           #files: ./lib.c.gcov
+           files: ./default.profdata
